// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RewindConfirmation > renders correctly with stats 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│ Confirm Rewind                                                               │
│                                                                              │
│ ┌──────────────────────────────────────────────────────────────────────────┐ │
│ │ 1 file affected: test.ts                                                 │ │
│ │ +10 lines -5 lines                                                       │ │
│ │                                                                          │ │
│ │ This will revert file changes.                                           │ │
│ └──────────────────────────────────────────────────────────────────────────┘ │
│                                                                              │
│ Select an action:                                                            │
│                                                                              │
│ ● 1. Rewind conversation and revert file changes                             │
│   2. Rewind conversation only                                                │
│   3. Revert file changes only                                                │
│   4. Cancel                                                                  │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindConfirmation > renders correctly without stats 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│ Confirm Rewind                                                               │
│                                                                              │
│ No files have been changed.                                                  │
│                                                                              │
│ Select an action:                                                            │
│                                                                              │
│ ● 1. Rewind conversation only                                                │
│   2. Cancel                                                                  │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindConfirmation > renders timestamp when provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│ Confirm Rewind                                                               │
│                                                                              │
│ No files have been changed. (just now)                                       │
│                                                                              │
│ Select an action:                                                            │
│                                                                              │
│ ● 1. Rewind conversation only                                                │
│   2. Cancel                                                                  │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;
